# quaternion

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  predict.txt  predict_pitch.txt  predict_yaw.txt  true.txt  true_pitch.txt  true_yaw.txt
include/: kalman_autoaim.h
src/: kalman_autoaim.cpp
